--- a/quarkus-micrometer-demo/src/main/docker/docker-compose.yml
+++ b/quarkus-micrometer-demo/src/main/docker/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     ports:
       - "9090:9090"
     restart: always
+    networks:
+      - monitoring
 
   grafana:
     image: grafana/grafana:latest
@@ -15,3 +17,20 @@ services:
     ports:
       - "3000:3000"
     restart: always
+    networks:
+      - monitoring
+
+  quarkus:
+    build:
+      context: ../../../
+      dockerfile: ./src/main/docker/Dockerfile.jvm
+    container_name: quarkus
+    ports:
+      - "8080:8080" # Optional, for host access
+    restart: always
+    networks:
+      - monitoring
+
+networks:
+  monitoring:
+    driver: bridge
