--- a/quarkus-micrometer-demo/src/main/docker/prometheus.yml
+++ b/quarkus-micrometer-demo/src/main/docker/prometheus.yml
@@ -1,6 +1,6 @@
 # my global config
 global:
-  scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+  scrape_interval: 15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
   evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
   # scrape_timeout is set to the global default (10s).
 
@@ -17,10 +17,10 @@ scrape_configs:
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
     static_configs:
-      - targets: ['127.0.0.1:9090']
+      - targets: [ 'localhost:9090' ] # Prometheus creates metrics of itself. Localhost is inside the container!
 
   - job_name: 'quarkus-micrometer'
     metrics_path: '/q/metrics'
     scrape_interval: 3s
     static_configs:
-      - targets: ['HOST:8080']
+      - targets: [ 'quarkus:8080' ]
