--- a/quarkus-micrometer-demo/src/main/docker/docker-compose.yml
+++ b/quarkus-micrometer-demo/src/main/docker/docker-compose.yml
@@ -29,6 +29,8 @@ services:
     restart: always
     networks:
       - monitoring
+    command: >
+      bash -c './mvnw clean package && java -jar target/quarkus-run.jar'
 
 networks:
   monitoring:
